--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <header>
         <div class="container">
             <h1>Welcome to Our Pizza Shop</h1>
+            <h1>Welcome to Our Pizza Shop</h1>
+            <h1>Welcome to Our Pizza Shop</h1>
+            <h1>Welcome to Our Pizza Shop</h1>
+            <h1>Welcome to Our Pizza Shop</h1>
+            <h1>Welcome to Our Pizza Shop</h1>
             <nav>
                 <ul>
                     <li><a href="#menu">Menu</a></li>
